# jobdemo

./: English.txt  build.gradle  debug.keystore  gradle.properties  release.jks  settings.gradle
app/: build.gradle  proguard-rules.pro
app/schemas/com.example.jobdemo.base.AppDataBase/: 2.json
app/src/app_official/java/com.example.jobdemo/: WebApi.java
app/src/app_qq/java/com.example.jobdemo/: WebApi.java
app/src/main/: AndroidManifest.xml  Translate
app/src/main/assets/: imUsers.xml  xieyi.html  yjt.html
app/src/main/cpp/: CMakeLists.txt  jobdemo.cpp  secondC.cpp
app/src/main/res/anim/: dismiss_down.xml  fade_in.xml  fade_out.xml  finish_in.xml  finish_out.xml  group_animation.xml  layout_item_translate.xml  show_up.xml  test_alpha.xml  test_rotate.xml  test_scale.xml  translate_animation.xml
app/src/main/res/animator/: value_animator.xml
app/src/main/res/drawable/: btn_default.xml  btn_green.xml  btn_isenabled.xml  btn_right_save_text_selector.xml  captain_americe.xml  clip_test.xml  concentric_circles.xml  frag_bg.xml  gradient_item_decoration.xml  inset_test.xml  level_test.xml  poster_head_bg_green.xml  pull_down_head.xml  rectangle_bg.xml  rectangle_corners_20_bg_white_storke_gray.xml  ring_green.xml  scale_test.xml  select_enable_green_gray.xml  selector_spinner.xml  storke_black.xml  (+6 more)
app_360/debug/: output-metadata.json
gradle/wrapper/: gradle-wrapper.properties
mylibrary/src/main/: AndroidManifest.xml
sign/: default.jks  default_sign.properties  default默认签名信息.txt
utilslibrary/: build.gradle
utilslibrary/src/main/: AndroidManifest.xml
(+437 files in other folders)
